Improve query for listing channels
FossilOrigin-Name: 8f65652ceb6bd036abac88e92231a25206798a3b

--- a/chat/public/chat.css
+++ b/chat/public/chat.css
@@ -151,11 +151,13 @@ body.public:has(#chat) footer.public {
 .channels ul li a {
 	display: block;
 	padding: .2em .5em;
+	white-space: pre;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 
 .channels ul li.current a {
 	background: rgba(var(--gSecondColor), 0.4);
-	font-weight: bold;
 }
 
 .channels ul li a::before {
