--- a/caisse/admin/style.css
+++ b/caisse/admin/style.css
@@ -257,3 +257,19 @@
 .pos-user-search #rename_no_user {
 	font-size: .9em;
 }
+
+.pos-balances:not(.pos-balances-count-1) {
+	display: flex;
+	flex-direction: row;
+	text-align: center;
+	align-items: stretch;
+	gap: 1em;
+}
+
+.pos-balances fieldset {
+	max-width: 25em;
+}
+
+.pos-balances fieldset legend {
+	font-size: 1.2em;
+}
