Implement user wallets
FossilOrigin-Name: 14459f38969bf1e7821ac8bbd08399336edd3c5d

--- a/caisse/admin/style.css
+++ b/caisse/admin/style.css
@@ -93,6 +93,10 @@
 	padding: .5em;
 }
 
+.pos .items table td.qty {
+	text-align: center;
+}
+
 @media screen and (max-width:600px) {
 	.items table.list tbody tr {
 		display: flex;
