Add new message indicator
FossilOrigin-Name: 367b97d22af647a4bcdcc845ea3f92a6d7c9d95f

--- a/chat/public/chat.css
+++ b/chat/public/chat.css
@@ -183,6 +183,11 @@ body.public:has(#chat) footer.public {
 	content: "👤";
 }
 
+.channels ul li.new a::after {
+	content: "!";
+	display: block;
+}
+
 .chatbox form {
 	display: flex;
 	align-items: stretch;
